replace new Integer with Integer.valueOf